credentials.yml updated

--- a/credentials.yml
+++ b/credentials.yml
@@ -1,6 +1,5 @@
 # In credentials.yml
-
-#telegram:
-#  access_token: "${TELEGRAM_BOT_TOKEN}"
- # verify: "aiml2026_bot"
-  #webhook_url: "https://rasa-server-4l4v.onrender.com/webhooks/telegram/webhook"
+telegram:
+  access_token: "${TELEGRAM_BOT_TOKEN}"
+  verify: "aiml2026_bot"
+  webhook_url: "https://rasa-server-4l4v.onrender.com/webhooks/telegram/webhook"
