--- a/endpoints.yml
+++ b/endpoints.yml
@@ -1,3 +1,3 @@
 action_endpoint:
-  url: "http://action-server:5055/webhook"  #"http://localhost:5055/webhook"
+  url: "${RENDER_EXTERNAL_URL}/webhook" #"http://action-server:5055/webhook"  #"http://localhost:5055/webhook"
   async_ops_timeout: 300
