--- a/render.yaml
+++ b/render.yaml
@@ -1,3 +1,4 @@
+# In render.yaml
 services:
   - name: rasa-server
     type: web
@@ -5,11 +6,12 @@ services:
     env: docker
     dockerfilePath: ./Dockerfile.rasa
     healthCheckPath: /
+    startCommand: "rasa run --enable-api --cors '*' --connector telegram"
     envVars:
-      - fromGroup: rasa-secrets # Recommended: Use an environment group for secrets
+      - fromGroup: rasa-secrets
 
   - name: rasa-actions
-    type: worker # Use 'worker' for the action server
+    type: worker
     plan: free
     env: docker
-    dockerfilePath: ./Dockerfile.actions # Points to the Dockerfile for your actions
+    dockerfilePath: ./Dockerfile.actions
