--- a/endpoints.yml
+++ b/endpoints.yml
@@ -1,3 +1,3 @@
+# In endpoints.yml
 action_endpoint:
-  url: "${RENDER_EXTERNAL_URL}/webhook" #"http://action-server:5055/webhook"  #"http://localhost:5055/webhook"
-  async_ops_timeout: 300
+  url: "https://action-server-k6in.onrender.com/webhook"
