--- a/endpoints.yml
+++ b/endpoints.yml
@@ -1,3 +1,3 @@
 # In endpoints.yml
 action_endpoint:
-  url: "https://action-server-k6in.onrender.com/webhook"
+  url: "https://action-server-loom.onrender.com"
